# MIA_1S2026_P1_202305456

./: README.md
backend/: CMakeLists.txt
backend/src/: main.cpp  main2.cpp
backend/src/commands/: Fdisk.cpp  Fdisk.hpp  Mkdisk.cpp  Mkdisk.hpp  Mkfs.cpp  Mkfs.hpp  Mount.cpp  Mount.hpp  MountedCmd.cpp  MountedCmd.hpp  Rmdisk.cpp  Rmdisk.hpp
backend/src/disk/: DiskManager.cpp  DiskManager.hpp  MountedPartitionManager.cpp  MountedPartitionManager.hpp
backend/src/structures/: Structures.hpp
backend/src/utils/: CommandParser.cpp  CommandParser.hpp
